fix(simple-blog): navbar showing behind the post list

--- a/projects/simple-blog/styles/navbar.css
+++ b/projects/simple-blog/styles/navbar.css
@@ -2,6 +2,7 @@
 .nav-wrapper {
   position: sticky;
   top: 0;
+  z-index: 1;
   border-bottom: 3px solid #fff;
   background: rgb(0 0 0 / 55%);
   /* backdrop-filter: blur(10px); */
